samples/_failures_safe/1761794288_c3b1a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d166ed4.c: In function ‘main’:
./samples/SAFE/__tmp_6d166ed4.c:146:49: error: expected ‘)’ at end of input
  146 |         if (rows_a != rows_b || cols_a != cols_b
      |            ~                                    ^
      |                                                 )
./samples/SAFE/__tmp_6d166ed4.c:146:9: error: expected declaration or statement at end of input
  146 |         if (rows_a != rows_b || cols_a != cols_b
      |         ^~
./samples/SAFE/__tmp_6d166ed4.c:146:9: error: expected declaration or statement at end of input
